moved the menu and top img out of the content class, fixed the upper content and have the picture and text in the right order and spacing correct

--- a/css/index.css
+++ b/css/index.css
@@ -173,7 +173,8 @@ html {
 .upperContent .sjArch .sjArchContent {
   flex-direction: column;
   justify-content: center;
-  padding: 6% 0% 3% 6%;
+  padding: 6% 0%;
+  margin-right: 3%;
 }
 .upperContent .sjArch .sjArchContent h3 {
   font-weight: bold;
@@ -190,13 +191,18 @@ html {
   margin: 6% 0%;
 }
 .upperContent .archIMG {
-  padding: 4% 4% 4% 0%;
+  padding: 4% 0%;
 }
 .futureDesign {
-  border: 1px red solid;
+  display: flex;
+  justify-content: space-between;
 }
 .futureDesign .futureContent {
-  border: 1px green solid;
+  flex-direction: column;
+  justify-content: center;
+  order: 1;
+  margin-left: 3%;
+  padding: 6% 0%;
 }
 .futureDesign .futureContent h3 {
   font-weight: bold;
@@ -205,4 +211,13 @@ html {
 }
 .futureDesign .button {
   border: 1px solid black;
+  max-width: 43%;
+  padding: 3%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 6% 0%;
+}
+.futureDesign .futureIMG {
+  padding: 4% 0%;
 }
