--- a/less/homePageContent.less
+++ b/less/homePageContent.less
@@ -18,7 +18,8 @@ flex-direction: column;
         .sjArchContent{
             flex-direction: column;
             justify-content: center;
-            padding: 6% 0% 3% 6%;
+            padding: 6% 0%;
+            margin-right: 3%;
             
             h3{
                 font-weight: bold;
@@ -40,15 +41,22 @@ flex-direction: column;
     
     }
     .archIMG {
-        padding: 4% 4% 4% 0%;
+        padding: 4% 0%;
     }
 }
 
 .futureDesign{
-    border: 1px red solid;
+
+    display: flex;
+    justify-content: space-between;
 
     .futureContent{
-        border: 1px green solid;
+
+        flex-direction: column;
+        justify-content: center;
+        order: 1;
+        margin-left: 3%;
+        padding: 6% 0%;
 
         h3{
             font-weight: bold;
@@ -59,6 +67,16 @@ flex-direction: column;
 
     .button{
         border: 1px solid black;
+            max-width: 43%;
+            padding: 3%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin: 6% 0%;
     }
 
+    .futureIMG {
+        
+        padding: 4% 0%;
+    }
 }
